<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_single_medication"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dent.medmanager.SingleMedicationActivity">
    <include
        android:id="@+id/my_toolbar6" layout="@layout/toolbar"></include>
    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cv_medication_list"
        android:layout_width="fill_parent"
        android:layout_height="240dp"
        android:padding="16dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="96dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_med_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drug_name"
                android:textSize="24sp"
                android:layout_marginTop="8dp"
                android:textColor="#00C5F3"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_med_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drug_dosage"
                android:textSize="16sp"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/tv_med_frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drug_frequency"
                android:textSize="20sp"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/tv_med_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drug_time"
                android:textSize="20sp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/tv_med_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drug_status"
                android:textSize="20sp"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:textAlignment="center"/>
            <ImageView
                android:id="@+id/iv_med_status"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_completed"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
